--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
   <!-- Fonts & Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+  <!-- AOS -->
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css">
 
   <!-- CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
   <canvas id="bgCanvas"></canvas>
 
-  <!-- 🌟 NAVBAR -->
-  <header class="navbar" id="navbar">
+  <!-- Navbar -->
+  <header class="navbar">
     <div class="logo">🪄 Sara</div>
-    <div class="menu-toggle" id="menu-toggle"><i class="fas fa-bars"></i></div>
-    <nav class="nav-menu" id="nav-menu">
+    <nav>
       <ul class="nav-links">
-        <li><a href="#home" class="active">Home</a></li>
+        <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#projects">Projects</a></li>
@@ -33,17 +33,19 @@
     </nav>
   </header>
 
-  <!-- 🪩 HERO -->
+  <!-- Hero -->
   <section id="home" class="hero">
     <div class="hero-content" data-aos="fade-right">
       <p class="tag">✨ WELCOME TO MY WORLD ✨</p>
       <h1>Hi, <span id="typing"></span></h1>
       <h2><span>UI & UX</span> Designer</h2>
       <p class="desc">I create intuitive and visually appealing digital experiences that meet users’ expectations.</p>
+
       <div class="hero-buttons">
         <a href="#projects" class="btn primary">My Projects</a>
         <a href="#" class="btn secondary">Download CV</a>
       </div>
+
       <div class="socials">
         <a href="#"><i class="fab fa-instagram"></i></a>
         <a href="#"><i class="fab fa-linkedin"></i></a>
@@ -51,84 +53,92 @@
         <a href="#"><i class="fab fa-facebook"></i></a>
       </div>
     </div>
+
     <div class="hero-avatar" data-aos="fade-left">
       <img src="images/avatar.png" alt="Sara Avatar">
     </div>
   </section>
 
-  <!-- 💜 ABOUT -->
-  <section id="about" class="section-glass">
+  <!-- About -->
+  <section id="about" class="about-section">
     <div class="about-container" data-aos="fade-up">
-      <div class="about-content">
-        <h2>About Me</h2>
-        <p>I'm <strong>Sara Howari</strong>, a passionate UI/UX designer focused on crafting seamless and engaging digital experiences.</p>
-        <p>With expertise in <strong>wireframing, prototyping, and user research</strong>, I bring creativity and structure together to create designs that stand out.</p>
-        <div class="skills">
-          <span class="skill-icon figma"><i class="fa-brands fa-figma"></i> Figma</span>
-          <span class="skill-icon ps"><i class="fa-solid fa-palette"></i> Photoshop</span>
-          <span class="skill-icon xd"><i class="fa-solid fa-x"></i> XD</span>
-          <span class="skill-icon ai"><i class="fa-solid fa-bezier-curve"></i> Illustrator</span>
-        </div>
-      </div>
       <div class="about-avatar">
         <div class="avatar-bg">
           <img src="images/avatar.png" alt="Sara Avatar">
         </div>
+        <div class="floating-shapes">
+          <span class="shape"></span>
+          <span class="shape"></span>
+          <span class="shape"></span>
+        </div>
+      </div>
+
+      <div class="about-content glass">
+        <h2>About Me</h2>
+        <p>
+          Welcome to my portfolio! I'm <strong>Sara Howari</strong>, a passionate UI/UX designer
+          dedicated to creating seamless and visually engaging digital experiences.
+        </p>
+        <p>
+          My skills include <strong>wireframing, prototyping, and user research</strong>.
+        </p>
+        <h3>Skills</h3>
+        <div class="skills">
+          <span class="skill-icon figma"><i class="fa-brands fa-figma"></i> Figma</span>
+          <span class="skill-icon xd"><i class="fa-solid fa-x"></i> XD</span>
+          <span class="skill-icon ps"><i class="fa-solid fa-palette"></i> Photoshop</span>
+          <span class="skill-icon ai"><i class="fa-solid fa-bezier-curve"></i> Illustrator</span>
+        </div>
       </div>
     </div>
+
+    <div class="scroll-down">
+      <a href="#services"><i class="fa-solid fa-chevron-down"></i></a>
+    </div>
   </section>
 
-  <!-- 🛠️ SERVICES -->
-  <section id="services" class="section-glass" data-aos="fade-up">
+  <!-- Services -->
+  <section id="services" class="services" data-aos="fade-up">
     <h2>Services</h2>
     <div class="service-cards">
-      <div class="card"><i class="fas fa-paint-brush"></i><h3>UI/UX Design</h3><p>Enhancing user experiences with clean design.</p></div>
-      <div class="card"><i class="fas fa-code"></i><h3>Web Design</h3><p>Responsive and aesthetic websites.</p></div>
-      <div class="card"><i class="fas fa-mobile-alt"></i><h3>App Design</h3><p>User-friendly mobile interfaces.</p></div>
-      <div class="card"><i class="fas fa-vector-square"></i><h3>Prototyping</h3><p>Wireframes that shape ideas into flow.</p></div>
+      <div class="card glow"><i class="fas fa-paint-brush"></i><h3>UI/UX Design</h3><p>Crafting intuitive designs that enhance user experience.</p></div>
+      <div class="card glow"><i class="fas fa-code"></i><h3>Web Design</h3><p>Responsive and engaging websites.</p></div>
+      <div class="card glow"><i class="fas fa-mobile-alt"></i><h3>App Design</h3><p>User-friendly mobile interfaces.</p></div>
+      <div class="card glow"><i class="fas fa-vector-square"></i><h3>Prototyping</h3><p>Building structured wireframes.</p></div>
     </div>
   </section>
 
-  <!-- 📱 PROJECTS -->
-  <section id="projects" class="section-glass" data-aos="fade-up">
+  <!-- Projects -->
+  <section id="projects" class="projects" data-aos="fade-up">
     <h2>My Projects</h2>
     <div class="project-list">
-      <div class="project-card"><h3>Amaksora App</h3><p>Modern mobile app UI/UX design.</p></div>
-      <div class="project-card"><h3>Homy App</h3><p>Intuitive interface with simple flow.</p></div>
-      <div class="project-card"><h3>B-Roll Media</h3><p>Web app designed with users in mind.</p></div>
+      <div class="project-card glass"><h3>Amaksora App</h3><p>Mobile app UI/UX design.</p></div>
+      <div class="project-card highlight glass"><h3>Homy App</h3><p>Seamless and intuitive app interface.</p></div>
+      <div class="project-card glass"><h3>B-Roll Media</h3><p>Modern web interface.</p></div>
     </div>
   </section>
 
-  <!-- 💬 TESTIMONIALS -->
-  <section id="testimonials" class="section-glass" data-aos="fade-up">
+  <!-- Testimonials -->
+  <section id="testimonials" class="testimonials" data-aos="fade-up">
     <h2>Testimonials</h2>
-    <div class="testimonial-card">
-      <p>“Sara’s design was elegant, intuitive, and efficient. Highly recommended!”</p>
+    <div class="testimonial-card glass">
+      <p>“Sara did an amazing job designing a user-friendly and intuitive experience for our project.”</p>
       <h4>— Huda Samer, CEO</h4>
     </div>
   </section>
 
-  <!-- 💌 CONTACT -->
-  <section id="contact" class="section-glass" data-aos="fade-up">
+  <!-- Contact -->
+  <section id="contact" class="contact" data-aos="fade-up">
     <h2>Let's Create Something Amazing Together ✨</h2>
-    <form id="contactForm">
-      <div class="form-row">
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-      </div>
+    <form>
+      <input type="text" placeholder="Your Name" required>
+      <input type="email" placeholder="Your Email" required>
       <textarea placeholder="Write your message..." required></textarea>
       <button type="submit" class="btn primary">Send Message</button>
     </form>
-    <div id="thankPopup" class="thank-popup">
-      <div class="popup-content">
-        <i class="fa-solid fa-heart"></i>
-        <h3>Thank You!</h3>
-        <p>Your message has been received 💌</p>
-      </div>
-    </div>
   </section>
 
-  <!-- 🌙 FOOTER -->
+  <!-- Footer -->
   <footer class="footer">
     <h3>✨ Thanks for watching ✨</h3>
     <div class="footer-icons">
@@ -139,6 +149,7 @@
     </div>
   </footer>
 
+  <!-- Scripts -->
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script src="script.js"></script>
 </body>
