--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sara Howari | UI/UX Designer</title>
 
   <!-- Fonts & Icons -->
@@ -62,26 +62,15 @@
   <!-- About -->
   <section id="about" class="about-section">
     <div class="about-container" data-aos="fade-up">
-      <div class="about-avatar">
-        <div class="avatar-bg">
-          <img src="images/avatar.png" alt="Sara Avatar">
-        </div>
-        <div class="floating-shapes">
-          <span class="shape"></span>
-          <span class="shape"></span>
-          <span class="shape"></span>
-        </div>
+      <div class="avatar-bg">
+        <img src="images/avatar.png" alt="Sara Avatar">
       </div>
 
       <div class="about-content glass">
         <h2>About Me</h2>
-        <p>
-          Welcome to my portfolio! I'm <strong>Sara Howari</strong>, a passionate UI/UX designer
-          dedicated to creating seamless and visually engaging digital experiences.
-        </p>
-        <p>
-          My skills include <strong>wireframing, prototyping, and user research</strong>.
-        </p>
+        <p>I'm <strong>Sara Howari</strong>, a passionate UI/UX designer dedicated to creating seamless and visually engaging digital experiences.</p>
+        <p>My skills include <strong>wireframing, prototyping, and user research</strong>.</p>
+
         <h3>Skills</h3>
         <div class="skills">
           <span class="skill-icon figma"><i class="fa-brands fa-figma"></i> Figma</span>
@@ -91,20 +80,16 @@
         </div>
       </div>
     </div>
-
-    <div class="scroll-down">
-      <a href="#services"><i class="fa-solid fa-chevron-down"></i></a>
-    </div>
   </section>
 
   <!-- Services -->
   <section id="services" class="services" data-aos="fade-up">
     <h2>Services</h2>
     <div class="service-cards">
-      <div class="card glow"><i class="fas fa-paint-brush"></i><h3>UI/UX Design</h3><p>Crafting intuitive designs that enhance user experience.</p></div>
-      <div class="card glow"><i class="fas fa-code"></i><h3>Web Design</h3><p>Responsive and engaging websites.</p></div>
-      <div class="card glow"><i class="fas fa-mobile-alt"></i><h3>App Design</h3><p>User-friendly mobile interfaces.</p></div>
-      <div class="card glow"><i class="fas fa-vector-square"></i><h3>Prototyping</h3><p>Building structured wireframes.</p></div>
+      <div class="card"><i class="fas fa-paint-brush"></i><h3>UI/UX Design</h3><p>Crafting intuitive designs that enhance user experience.</p></div>
+      <div class="card"><i class="fas fa-code"></i><h3>Web Design</h3><p>Designing responsive and engaging websites tailored to users.</p></div>
+      <div class="card"><i class="fas fa-mobile-alt"></i><h3>App Design</h3><p>Creating seamless and user-friendly mobile app interfaces.</p></div>
+      <div class="card"><i class="fas fa-vector-square"></i><h3>Prototyping</h3><p>Building structured wireframes for better design flow.</p></div>
     </div>
   </section>
 
@@ -112,16 +97,16 @@
   <section id="projects" class="projects" data-aos="fade-up">
     <h2>My Projects</h2>
     <div class="project-list">
-      <div class="project-card glass"><h3>Amaksora App</h3><p>Mobile app UI/UX design.</p></div>
-      <div class="project-card highlight glass"><h3>Homy App</h3><p>Seamless and intuitive app interface.</p></div>
-      <div class="project-card glass"><h3>B-Roll Media</h3><p>Modern web interface.</p></div>
+      <div class="project-card"><h3>Amaksora App</h3><p>Visually appealing mobile app UI/UX design.</p></div>
+      <div class="project-card highlight"><h3>Homy App</h3><p>Seamless and intuitive app interface.</p></div>
+      <div class="project-card"><h3>B-Roll Media</h3><p>Modern web interface with user-focused flow.</p></div>
     </div>
   </section>
 
   <!-- Testimonials -->
   <section id="testimonials" class="testimonials" data-aos="fade-up">
     <h2>Testimonials</h2>
-    <div class="testimonial-card glass">
+    <div class="testimonial-card">
       <p>“Sara did an amazing job designing a user-friendly and intuitive experience for our project.”</p>
       <h4>— Huda Samer, CEO</h4>
     </div>
@@ -149,7 +134,6 @@
     </div>
   </footer>
 
-  <!-- Scripts -->
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script src="script.js"></script>
 </body>
