--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <section id="about" class="about-section">
     <div class="about-container" data-aos="fade-up">
       <div class="avatar-bg">
-        <img src="images/avatar.png" alt="Mursed Avatar">
+        <img src="image2.png" alt="MA logo">
       </div>
 
       <div class="about-content glass">
