--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+  <!-- Cursor Glow -->
+  <div class="cursor-glow"></div>
+
   <canvas id="bgCanvas"></canvas>
 
   <!-- Navbar -->
   <header class="navbar">
     <div class="brand-logo">
-  <span class="icon">⚡</span> DesignVerse <span>by Mursed</span>
+      <span class="icon">⚡</span> DesignVerse <span>by Mursed</span>
     </div>
     <nav>
       <ul class="nav-links">
@@ -128,7 +132,7 @@
     </div>
   </footer>
 
-  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-  <script src="script.js"></script>
+
+  
 </body>
 </html>
