--- a/index.html
+++ b/index.html
@@ -25,20 +25,19 @@
   <!-- Background Canvas -->
   <canvas id="bgCanvas"></canvas>
 
-  <!-- Navbar -->
+  <!-- ================= NAVBAR (UPDATED) ================= -->
   <header class="navbar">
     <div class="brand-logo">
       <span class="icon">⚡</span> DesignVerse <span>by Mursed</span>
     </div>
-    <nav>
-      <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+
+    <ul class="nav-links">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
   </header>
 
   <!-- HERO -->
