--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
   <!-- Background Canvas -->
   <canvas id="bgCanvas"></canvas>
 
-  <!-- ================= NAVBAR (UPDATED) ================= -->
+  <!-- Navbar -->
   <header class="navbar">
-    <div class="brand-logo">
-      <span class="icon">⚡</span> DesignVerse <span>by Mursed</span>
-    </div>
+    <div class="brand-logo">✦ Mursed <span>DesignVerse</span></div>
 
-    <ul class="nav-links">
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#services">Services</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
   </header>
 
   <!-- HERO -->
@@ -70,6 +70,7 @@
   <!-- ABOUT -->
   <section id="about" class="about-section">
     <div class="about-container" data-aos="fade-up">
+
       <div class="avatar-bg">
         <img src="image2.png" alt="MA logo">
       </div>
@@ -89,6 +90,7 @@
           <span class="skill-icon"><i class="fa-solid fa-database"></i> Access</span>
         </div>
       </div>
+
     </div>
   </section>
 
@@ -138,5 +140,6 @@
   <!-- Scripts -->
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script src="script.js"></script>
+
 </body>
 </html>
