--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
 
     <div class="hero-avatar" data-aos="fade-left">
-      <img src="images/avatar.png" alt="Mursed Avatar">
+      <img src="image1.jpg" alt="profile picture">
     </div>
   </section>
 
