--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="hero-content" data-aos="fade-right">
       <p class="tag">✨ WELCOME TO MY PORTFOLIO ✨</p>
 
-      <h1>Hi, I'm <span id="typing"></span></h1>
+      <h1>Hi, I'm <span id="typing">MURSED</span></h1>
 
       <h2><span>Web Designer</span> & <span>Data Entry Expert</span></h2>
       <p class="desc">I design clean and responsive websites and handle Excel & PowerPoint projects professionally.</p>
