--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <a href="#"><i class="fab fa-facebook"></i></a>
       <a href="#"><i class="fab fa-linkedin"></i></a>
       <a href="#"><i class="fab fa-github"></i></a>
-      <a href="#"><i class="fas fa-envelope"></i></a>
+      <a href="https://www.instagram.com/invites/contact/?igsh=1dvfwcjz57jtz&utm_content=ihsl0i2"><i class="fas fa-instagram"></i></a>
     </div>
   </footer>
 
