--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="socials">
         <a href="#"><i class="fab fa-linkedin"></i></a>
         <a href="#"><i class="fab fa-github"></i></a>
-        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.facebook.com/share/1CKyEKW62x/"><i class="fab fa-facebook"></i></a>
       </div>
     </div>
 
@@ -129,7 +129,7 @@
   <footer class="footer">
     <h3>✨ Thank You for Visiting ✨</h3>
     <div class="footer-icons">
-      <a href="#"><i class="fab fa-facebook"></i></a>
+      <a href="https://www.facebook.com/share/1CKyEKW62x/"><i class="fab fa-facebook"></i></a>
       <a href="#"><i class="fab fa-linkedin"></i></a>
       <a href="#"><i class="fab fa-github"></i></a>
       <a href="https://www.instagram.com/invites/contact/?igsh=1dvfwcjz57jtz&utm_content=ihsl0i2"><i class="fab fa-instagram"></i></a>
